; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_uli526x.c_phy_write_1bit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_uli526x.c_phy_write_1bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MDCLKH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i32)* @phy_write_1bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @phy_write_1bit(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @outl(i32 %7, i64 %8)
  %10 = call i32 @udelay(i32 1)
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @MDCLKH, align 4
  %13 = or i32 %11, %12
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @outl(i32 %13, i64 %14)
  %16 = call i32 @udelay(i32 1)
  %17 = load i32, i32* %5, align 4
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @outl(i32 %17, i64 %18)
  %20 = call i32 @udelay(i32 1)
  ret void
}

declare dso_local i32 @outl(i32, i64) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
